--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">FalconBrick</string>
     <string name="appbar_title">Search</string>
     <string name="search_hint">Search terms here</string>
+    <string name="empty_text">Type to start searching for Unit, Activity, Step Name</string>
 </resources>
